# api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/input/PinImageDownloadInputDto.kt
@@ -1,0 +1,8 @@
+package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.input
+
+import jakarta.validation.constraints.NotBlank
+
+data class PinImageDownloadInputDto(
+    @field:NotBlank
+    val sourceUrl: String,
+)
